fix overflow issue

--- a/frontend/src/components/GroupView/groupview-sizes.scss
+++ b/frontend/src/components/GroupView/groupview-sizes.scss
@@ -5,8 +5,11 @@ $progressbar-height: 80px;
 $sidebar-width: 80px;
 $sidebar-header-height: 24px;
 $sidebar-header-margin: 14px;
-$sidebar-personal-button-height: 25vh;
-$sidebar-group-manager-height: 75vh;
+$sidebar-personal-button-height: 15vh;
+$sidebar-group-manager-height: 85vh;
+$add-button-height: 80px;
+$expanding-div-base-height: 75px;
+$links-height: 62px;
 
 $taskqueue-height: 60vh;
 $peoplelist-height: 40vh;
